--- a/font/Amaranth.css
+++ b/font/Amaranth.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Amaranth";
-  src: url("./fonts/Amaranth.woff?50c28683b8d6200ebb0ad9bf6f370fae") format("woff"), url("./fonts/Amaranth.woff2?50c28683b8d6200ebb0ad9bf6f370fae") format("woff2");
+  src: url("./fonts/Amaranth.woff?6255d0f79fd91edb374efe09b081a4a4") format("woff"), url("./fonts/Amaranth.woff2?6255d0f79fd91edb374efe09b081a4a4") format("woff2");
 }
 .ai {
   -moz-osx-font-smoothing: grayscale;
@@ -1159,6 +1159,26 @@
 
 .ai.ai-bel:before {
   content: "\f212";
+}
+
+.ai.ai-bicycle:before {
+  content: "\f213";
+}
+
+.ai.ai-book-open:before {
+  content: "\f214";
+}
+
+.ai.ai-bootstrap:before {
+  content: "\f215";
+}
+
+.ai.ai-box:before {
+  content: "\f216";
+}
+
+.ai.ai-branch-up:before {
+  content: "\f217";
 }
 
 /*# sourceMappingURL=Amaranth.css.map */
