--- a/font/Amaranth.scss
+++ b/font/Amaranth.scss
@@ -2,8 +2,8 @@ $Amaranth-font: "Amaranth";
 
 @font-face {
   font-family: $Amaranth-font;
-  src: url("./fonts/Amaranth.woff?50c28683b8d6200ebb0ad9bf6f370fae") format("woff"),
-url("./fonts/Amaranth.woff2?50c28683b8d6200ebb0ad9bf6f370fae") format("woff2");
+  src: url("./fonts/Amaranth.woff?6255d0f79fd91edb374efe09b081a4a4") format("woff"),
+url("./fonts/Amaranth.woff2?6255d0f79fd91edb374efe09b081a4a4") format("woff2");
 }
 
 .ai {
@@ -345,6 +345,11 @@ $Amaranth-map: (
   "arrows-down-left-right-up-center": "\f210",
   "beer": "\f211",
   "bel": "\f212",
+  "bicycle": "\f213",
+  "book-open": "\f214",
+  "bootstrap": "\f215",
+  "box": "\f216",
+  "branch-up": "\f217",
 );
 
 .ai.ai-a-gum:before {
@@ -1168,4 +1173,19 @@ $Amaranth-map: (
 }
 .ai.ai-bel:before {
   content: map-get($Amaranth-map, "bel");
+}
+.ai.ai-bicycle:before {
+  content: map-get($Amaranth-map, "bicycle");
+}
+.ai.ai-book-open:before {
+  content: map-get($Amaranth-map, "book-open");
+}
+.ai.ai-bootstrap:before {
+  content: map-get($Amaranth-map, "bootstrap");
+}
+.ai.ai-box:before {
+  content: map-get($Amaranth-map, "box");
+}
+.ai.ai-branch-up:before {
+  content: map-get($Amaranth-map, "branch-up");
 }
