--- a/font/Amaranth.css
+++ b/font/Amaranth.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Amaranth";
-  src: url("./fonts/Amaranth.woff?2cb72c8e806e02c389dc8c071906027c") format("woff"), url("./fonts/Amaranth.woff2?2cb72c8e806e02c389dc8c071906027c") format("woff2");
+  src: url("./fonts/Amaranth.woff?6c574262e1e60aaa99d3cc0d0b2a6fd5") format("woff"), url("./fonts/Amaranth.woff2?6c574262e1e60aaa99d3cc0d0b2a6fd5") format("woff2");
 }
 .ai {
   -moz-osx-font-smoothing: grayscale;
@@ -1187,6 +1187,14 @@
 
 .ai.ai-calendar-week:before {
   content: "\f219";
+}
+
+.ai.ai-code-branch-up:before {
+  content: "\f21a";
+}
+
+.ai.ai-code-branch:before {
+  content: "\f21b";
 }
 
 /*# sourceMappingURL=Amaranth.css.map */
