--- a/font/Amaranth.css
+++ b/font/Amaranth.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Amaranth";
-  src: url("./fonts/Amaranth.woff?0f0c4d87cf01af4fe027abb5acf0ee7e") format("woff"), url("./fonts/Amaranth.woff2?0f0c4d87cf01af4fe027abb5acf0ee7e") format("woff2");
+  src: url("./fonts/Amaranth.woff?bdb43b5518dbe610c5c98295f9f7efbd") format("woff"), url("./fonts/Amaranth.woff2?bdb43b5518dbe610c5c98295f9f7efbd") format("woff2");
 }
 .ai {
   -moz-osx-font-smoothing: grayscale;
@@ -1203,6 +1203,30 @@
 
 .ai.ai-car:before {
   content: "\f21d";
+}
+
+.ai.ai-amaranth:before {
+  content: "\f21e";
+}
+
+.ai.ai-coin:before {
+  content: "\f21f";
+}
+
+.ai.ai-compass-drafting:before {
+  content: "\f220";
+}
+
+.ai.ai-credit-card:before {
+  content: "\f221";
+}
+
+.ai.ai-microchip:before {
+  content: "\f222";
+}
+
+.ai.ai-terminal:before {
+  content: "\f223";
 }
 
 /*# sourceMappingURL=Amaranth.css.map */
