--- a/font/Amaranth.scss
+++ b/font/Amaranth.scss
@@ -2,8 +2,8 @@ $Amaranth-font: "Amaranth";
 
 @font-face {
   font-family: $Amaranth-font;
-  src: url("./fonts/Amaranth.woff?75537cd97fd0a8fb75933ef150559ddc") format("woff"),
-url("./fonts/Amaranth.woff2?75537cd97fd0a8fb75933ef150559ddc") format("woff2");
+  src: url("./fonts/Amaranth.woff?f1c5afb838f12b90046a1712b8bd00c7") format("woff"),
+url("./fonts/Amaranth.woff2?f1c5afb838f12b90046a1712b8bd00c7") format("woff2");
 }
 
 .ai {
@@ -382,6 +382,8 @@ $Amaranth-map: (
   "printer": "\f235",
   "notes": "\f236",
   "kite": "\f237",
+  "thumbstack-slash": "\f238",
+  "thumbstack": "\f239",
 );
 
 .ai.ai-a-gum:before {
@@ -1316,4 +1318,10 @@ $Amaranth-map: (
 }
 .ai.ai-kite:before {
   content: map-get($Amaranth-map, "kite");
+}
+.ai.ai-thumbstack-slash:before {
+  content: map-get($Amaranth-map, "thumbstack-slash");
+}
+.ai.ai-thumbstack:before {
+  content: map-get($Amaranth-map, "thumbstack");
 }
