Add receipt, rocket, scouting and ticket icons

--- a/font/Amaranth.css
+++ b/font/Amaranth.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Amaranth";
-  src: url("./fonts/Amaranth.woff?b7dfbc6c0fea047cbf2019680c758158") format("woff"), url("./fonts/Amaranth.woff2?b7dfbc6c0fea047cbf2019680c758158") format("woff2");
+  src: url("./fonts/Amaranth.woff?b0eee2d63702d16cea446abf49d597b8") format("woff"), url("./fonts/Amaranth.woff2?b0eee2d63702d16cea446abf49d597b8") format("woff2");
 }
 .ai {
   -moz-osx-font-smoothing: grayscale;
@@ -1343,6 +1343,22 @@
 
 .ai.ai-tent:before {
   content: "\f240";
+}
+
+.ai.ai-receipt:before {
+  content: "\f241";
+}
+
+.ai.ai-rocket:before {
+  content: "\f242";
+}
+
+.ai.ai-scouting:before {
+  content: "\f243";
+}
+
+.ai.ai-ticket:before {
+  content: "\f244";
 }
 
 /*# sourceMappingURL=Amaranth.css.map */
