--- a/font/Amaranth.scss
+++ b/font/Amaranth.scss
@@ -2,8 +2,8 @@ $Amaranth-font: "Amaranth";
 
 @font-face {
   font-family: $Amaranth-font;
-  src: url("./fonts/Amaranth.woff?b0eee2d63702d16cea446abf49d597b8") format("woff"),
-url("./fonts/Amaranth.woff2?b0eee2d63702d16cea446abf49d597b8") format("woff2");
+  src: url("./fonts/Amaranth.woff?1e1dfcb4395463b23340a5a096801206") format("woff"),
+url("./fonts/Amaranth.woff2?1e1dfcb4395463b23340a5a096801206") format("woff2");
 }
 
 .ai {
@@ -395,6 +395,11 @@ $Amaranth-map: (
   "rocket": "\f242",
   "scouting": "\f243",
   "ticket": "\f244",
+  "tree": "\f245",
+  "trekking-backpack": "\f246",
+  "trophy": "\f247",
+  "universal-access": "\f248",
+  "wallet": "\f249",
 );
 
 .ai.ai-a-gum:before {
@@ -1368,4 +1373,19 @@ $Amaranth-map: (
 }
 .ai.ai-ticket:before {
   content: map-get($Amaranth-map, "ticket");
+}
+.ai.ai-tree:before {
+  content: map-get($Amaranth-map, "tree");
+}
+.ai.ai-trekking-backpack:before {
+  content: map-get($Amaranth-map, "trekking-backpack");
+}
+.ai.ai-trophy:before {
+  content: map-get($Amaranth-map, "trophy");
+}
+.ai.ai-universal-access:before {
+  content: map-get($Amaranth-map, "universal-access");
+}
+.ai.ai-wallet:before {
+  content: map-get($Amaranth-map, "wallet");
 }
